# discord_llm_news

./: (旧)readme.md  .env.example  .gitignore  Cargo.toml  README.md  YAAKO_README.md  YAAKO_README_MODULE.md  news_log.txt  news_md.md  prompt_candidate.md
logs/: news_log.txt  news_md.md
src/: config.rs  fetch_feed.rs  lib.rs  llm_request.rs  main.rs
src/controller/: fetch_feed.rs  filter_item.rs  llm_request.rs  mod.rs
src/discord/: dtos.rs  mod.rs  send.rs
src/models/: llm_dtos.rs  llm_request_fmt.rs  mod.rs  news.rs
