[package]
name = "discord_llm_news"
version = "0.1.0"
edition = "2024"

[dependencies]
# rss feed用クレート
rss = "2.0" 

# HTTPリクエストを簡単に送受信(同期用)
reqwest = { version = "0.12", features = ["blocking", "json"]}

# HTML解析用
scraper = "0.18"


# htmlをmdに変換する
html2md = "0.2.15"

# Jsonにシリアライズ
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


# 環境変数を読み込むためのやつ(.envのため)
dotenvy = "0.15"

# 現在の日時を取得
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }