[package]
name = "discord_llm_news"
version = "0.1.0"
edition = "2024"

[dependencies]
# rss feed用クレート
rss = "2.0" 

# HTTPリクエストを簡単に送受信(同期用)
reqwest = { version = "0.12", features = ["blocking", "json"]}

# HTML解析用
scraper = "0.18"


# htmlをmdに変換する
html2md = "0.2.15"

# Jsonにシリアライズ
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


# 環境変数を読み込むためのやつ(.envのため)
dotenvy = "0.15"

# 現在の日時を取得
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }

# 乱数生成
rand = "0.8"


# リリースビルド用の処理？geminiに聞いた。
[profile.release]
opt-level = 3        # 最大限の最適化
lto = true           # リンク時最適化（バイナリが速く、小さくなる）
codegen-units = 1    # コンパイルは遅くなるが、実行速度が向上する
panic = "abort"      # パニック時のメモリ巻き戻しを無効化（軽量化）
strip = true         # デバッグ情報を削除してサイズを大幅削減