[package]
name = "discord_llm_news"
version = "0.1.0"
edition = "2024"

[dependencies]
# rss feed用クレート
rss = "2.0" 

# HTTPリクエストを簡単に送受信(同期用)
reqwest = { version = "0.12", features = ["blocking", "json"]}

# HTML解析用
scraper = "0.18"


# htmlをmdに変換する
html2md = "0.2.15"

# Jsonにシリアライズ
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


# 環境変数を読み込むためのやつ(.envのため)
dotenvy = "0.15"

# 現在の日時を取得
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }

# 乱数生成
rand = "0.8"


# リリースビルド用の処理？geminiに聞いた。
[profile.release]
opt-level = 3          # 最大限の最適化
lto = true             # リンク時最適化（バイナリサイズ削減と高速化）
codegen-units = 1      # コンパイル時間は増えるが、実行速度が向上する
#panic = 'abort'        # パニック時にスタックトレースを破棄してサイズ削減（必要に応じて）
# ↑なんかのライブラリと相性悪かったらしくてなぜかエラー。やめとく。
strip = true           # シンボル情報を削除してバイナリを軽量化